--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "jygga",
   "version": "0.0.1",
-  "description": "",
+  "description": "A platform for building discord bots on top of discord.js using typescript",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepack": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
