--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "jygga",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A platform for building discord bots on top of discord.js using typescript",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "postinstall": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^12.2.0",
+    "reflect-metadata": "^0.1.13"
+  },
+  "peerDependencies": {
+    "discord.js": "^12.2.0"
+  },
+  "devDependencies": {
     "@types/node": "^12.7.4",
-    "discord.js": "^11.5.1",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^3.3.0",
-    "typescript": "^3.5.3"
+    "@types/ws": "^7.2.4",
+    "tsyringe": "^4.1.0"
   }
 }
