--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "reflect-metadata": "^0.1.13"
   },
   "peerDependencies": {
-    "discord.js": "^12.2.0",
+    "discord.js": "^12.2.0"
+  },
+  "devDependencies": {
     "@types/node": "^12.7.4",
     "@types/ws": "^7.2.4",
     "tsyringe": "^4.1.0"
